# cloudsentinel

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  go-ci.yml  python-ci.yml  terraform-ci.yml
agent/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
agent/cmd/agent/: main.go
agent/deploy/: daemonset.yaml
agent/internal/faults/: cpu.go  cpu_test.go  disk.go  disk_test.go  fault.go  memory.go  memory_test.go  network.go  network_tc.go  network_test.go  registry.go
agent/internal/grpc/: server.go  server_test.go
agent/internal/metrics/: collectors.go
agent/internal/pb/: agent.pb.go  agent_grpc.pb.go
agent/proto/: agent.proto
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  db.py  main.py
api/app/models/: __init__.py  scenarios.py  scenarios_db.py
api/app/routers/: __init__.py  scenarios.py
api/tests/: conftest.py  test_meta.py  test_scenarios.py
dashboard/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
dashboard/src/app/: page.tsx
dashboard/src/components/: create-scenario-dialog.tsx  run-button.tsx  status-badge.tsx
dashboard/src/hooks/: use-scenarios.ts
docs/: ARCHITECTURE.md  architecture.md  getting-started.md  index.md  ml-pipeline.md  playground.md
docs/adr/: 000-template.md  001-use-apache-license.md
examples/configs/: local.yaml
examples/scenarios/: cpu-stress-light.yaml
infrastructure/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/kind/: README.md  main.tf  outputs.tf  variables.tf
ml-pipeline/: README.md  pyproject.toml
ml-pipeline/cloudsentinel_ml/: __init__.py  cli.py  features.py  model.py
ml-pipeline/tests/: test_features.py  test_model.py
orchestrator/: README.md  pyproject.toml
orchestrator/cloudsentinel/: __init__.py  cli.py
orchestrator/cloudsentinel/chaos/: __init__.py  engine.py  models.py
orchestrator/cloudsentinel/config/: __init__.py  cluster.py
orchestrator/cloudsentinel/grpc_client/: __init__.py  client.py
orchestrator/cloudsentinel/grpc_client/pb/: agent_pb2.py  agent_pb2_grpc.py
orchestrator/cloudsentinel/providers/: __init__.py  base.py  kind.py
orchestrator/tests/: test_chaos_models.py  test_config.py  test_providers.py
scripts/: check-prereqs.sh  demo.sh
