[project]
name = "cloudsentinel-ml"
version = "0.1.0"
description = "CloudSentinel ML pipeline for anomaly detection"
authors = [
    {name = "Kane",email = "mamoudoucheikhk@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "typer (>=0.24.2,<0.25.0)",
    "rich (>=15.0.0,<16.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "mypy (>=1.20.2,<2.0.0)"
]

[project.scripts]
cloudsentinel-ml = "cloudsentinel_ml.cli:app"

[tool.poetry]
package-mode = false
